# python-project-lvl4

./: README.md  db.sqlite3  pyproject.toml
task_manager/: settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/static/task_manager/: base.css
task_manager/templates/task_manager/: base.html  index.html  login.html
users/: urls.py  views.py
