[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["justpwned <justpwnedfrom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
